# cfd-textbook-v1

./: .buildinfo  .codespellrc  .gitignore  .pre-commit-config.yaml  Accuracy_of_the_Classifier.Rmd  Accuracy_of_the_Classifier.html  Another_Kind_Of_Character.Rmd  Another_Kind_Of_Character.html  Arrays.Rmd  Arrays.html  Calls.Rmd  Calls.html  Central_Limit_Theorem.html  Comparison.html  Correlation.Rmd  Correlation.html  Expressions.Rmd  Expressions.html  Implementing_the_Classifier.Rmd  Implementing_the_Classifier.html  Literary_Characters.Rmd  Literary_Characters.html  Makefile  More_on_Arrays.html  Multiple_Regression.html  Names.html  Nearest_Neighbors.Rmd  Nearest_Neighbors.html  Numbers.html  Plotting_the_Classics.html  README.md  Ranges.html  Rows_of_Tables.Rmd  Rows_of_Tables.html  String_Methods.html  Strings.html  Training_and_Testing.Rmd  Training_and_Testing.html  _config.yml  _course.yml  (+205 more)
_scripts/: make_redirects.py  process_notebooks.py
_sources/: Accuracy_of_the_Classifier.Rmd  Arrays.Rmd  Calls.Rmd  Central_Limit_Theorem.Rmd  Correlation.Rmd  Implementing_the_Classifier.Rmd  More_on_Arrays.Rmd  Multiple_Regression.Rmd  Nearest_Neighbors.Rmd  Plotting_the_Classics.Rmd  Rows_of_Tables.Rmd  bayes_theorem.md  boolean_arrays.Rmd  boolean_indexing.Rmd  bootstrap.Rmd  computational-tools.md  crosstab.Rmd  data8_functions.Rmd  df_basic_col_indexing.Rmd  df_plotting.Rmd  df_series_arrays.Rmd  df_sort_head_tail.Rmd  df_sums.Rmd  end_of_beginning.md  finding_lines.Rmd  fishers_tea.Rmd  havana_math.Rmd  indexing_assignment.Rmd  indexing_expressions.Rmd  intro.md  intro_multiple_regression.Rmd  large_numbers.Rmd  laws_of_probability.Rmd  leaping_ahead.Rmd  lists.Rmd  lists_and_arrays.Rmd  logistic_convexity.Rmd  mean_and_slopes.Rmd  mean_meaning.Rmd  (+15 more)
(+149 files in other folders)
